[package]
name = "laer-image-concept-cube141"
version = "0.1.1"
edition = "2024"
description = "special laer image with 141 pixels"
authors = ["FleetingLore <Macro__9@outlook.com>"]
license = "MIT"
repository = "https://github.com/localLore/laer-image-concept-cube141"

[dependencies]
laer-image-concept = "0.1.2"

[dev-dependencies]
code-steps = "0.5.0"

[[example]]
name = "demo"

[[test]]
name = "integration_test"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
